...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/movie_item_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
        <ImageView
            android:id="@+id/error_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/error"
            android:src="@drawable/ic_baseline_error_24"
            app:layout_constraintBottom_toTopOf="@+id/text_sad_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
...
